--- a/package.json
+++ b/package.json
@@ -9,12 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.7",
+    "@neondatabase/serverless": "^0.8.1",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^5.20.5",
+    "aws-sdk": "^2.1557.0",
+    "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dotenv": "^16.4.4",
+    "drizzle-kit": "^0.20.14",
+    "drizzle-orm": "^0.29.3",
     "lucide-react": "^0.330.0",
     "next": "14.1.0",
+    "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
+    "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
