--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "dotenv": "^16.4.4",
     "drizzle-kit": "^0.20.14",
     "drizzle-orm": "^0.29.3",
+    "langchain": "^0.1.18",
     "lucide-react": "^0.330.0",
     "next": "14.1.0",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
