--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "langchain": "^0.1.18",
     "lucide-react": "^0.330.0",
     "next": "14.1.0",
+    "openai-edge": "^1.2.2",
     "pdf-parse": "^1.1.1",
     "pg": "^8.11.3",
     "react": "^18",
