--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@pinecone-database/pinecone": "^2.0.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.20.5",
+    "@types/md5": "^2.3.5",
     "aws-sdk": "^2.1557.0",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
@@ -24,6 +25,7 @@
     "drizzle-orm": "^0.29.3",
     "langchain": "^0.1.18",
     "lucide-react": "^0.330.0",
+    "md5": "^2.3.0",
     "next": "14.1.0",
     "openai-edge": "^1.2.2",
     "pdf-parse": "^1.1.1",
